Karuna: Fix My Account buttons spacing issue. See #28.

--- a/karuna/woocommerce.css
+++ b/karuna/woocommerce.css
@@ -576,7 +576,9 @@ ul#shipping_method {
 
 .woocommerce-account .woocommerce-MyAccount-content .button {
   word-wrap: normal;
-  word-break: normal; }
+  word-break: normal;
+  display: inline-block;
+  margin: 0.2em; }
 
 @media screen and (min-width: 768px) {
   .woocommerce-account .woocommerce-MyAccount-navigation {
